--- a/testapp/package.json
+++ b/testapp/package.json
@@ -7,21 +7,21 @@
     "lint": "npm run setup && standardx -v ./packages/meteor-autoform/ | snazzy",
     "lint:fix": "npm run setup && standardx --fix ./packages/meteor-autoform/ | snazzy",
     "test": "METEOR_PACKAGE_DIRS='../' TEST_BROWSER_DRIVER=puppeteer TEST_SERVER=0 meteor test-packages --once --raw-logs --driver-package meteortesting:mocha ../",
-    "test:watch": "METEOR_PACKAGE_DIRS='../' TEST_BROWSER_DRIVER=puppeteer TEST_SERVER=0 TEST_WATCH=1 meteor test-packages --raw-logs --driver-package meteortesting:mocha ../"
+    "test:watch": "METEOR_PACKAGE_DIRS='../' TEST_BROWSER_DRIVER=puppeteer TEST_SERVER=0 TEST_WATCH=1 meteor test-packages --raw-logs --driver-package meteortesting:mocha ../",
+    "test:browser": "METEOR_PACKAGE_DIRS='../' TEST_SERVER=0 TEST_WATCH=1 meteor test-packages --raw-logs --driver-package meteortesting:mocha ../"
   },
   "dependencies": {
     "@babel/runtime": "^7.23.6",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
     "meteor-node-stubs": "^1.2.7",
-    "puppeteer": "^21.6.1"
+    "puppeteer": "^18.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.7",
     "@babel/eslint-parser": "^7.12.1",
     "chai": "^4.2.0",
     "eslint-config-standard": "^16.0.2",
-    "simpl-schema": "^1.13.1",
     "sinon": "^9.2.1",
     "snazzy": "^9.0.0",
     "standardx": "^7.0.0"
