--- a/testapp/package.json
+++ b/testapp/package.json
@@ -11,10 +11,11 @@
     "test:browser": "METEOR_PACKAGE_DIRS='../' TEST_SERVER=0 TEST_WATCH=1 meteor test-packages --raw-logs --driver-package meteortesting:mocha ../"
   },
   "dependencies": {
-    "@babel/runtime": "^7.23.6",
+    "@babel/runtime": "^7.24.4",
     "@popperjs/core": "^2.11.8",
-    "bootstrap": "^5.3.2",
-    "meteor-node-stubs": "^1.2.7",
+    "bootstrap": "^5.3.3",
+    "jquery": "^3.7.1",
+    "meteor-node-stubs": "^1.2.9",
     "puppeteer": "^18.2.1"
   },
   "devDependencies": {
